feat: finalizando JS

--- a/index.html
+++ b/index.html
@@ -17,18 +17,19 @@
         <h4 class="n-conselho">
             Conselho #1
         </h4>
-        <p class="conselho">
-            "Lorem ipsum dolor sit amet consectetur adipisicing elitorem ipsum dolor sit amet consectetur adipisicing elitorem ipsum dolor sit amet consectetur adipisicing elit."  
+        <p id="conselho" class="conselho">
+            Clique no botao para gerar um conselho
         </p>
         <picture>
             <source srcset="./src/img/pattern-divider-desktop.svg" media="(min-width: 900px)">
             <img class="line" src="./src/img/pattern-divider-mobile.svg" alt="lina separatoria">
         </picture>
         <div class="circle">
-            <button>
+            <button onclick="obterConselho()">
                 <img class="icon" src="./src/img/icon-dice.svg" alt="icon-button">
             </button>
         </div>
     </div>
+    <script src="./src/js/index.js"></script>
 </body>
 </html>
